[package]
name = "bevy_texture_demo"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.7.0"

# WARNING: Using bevy dynamic would make it impossible to debug!
# --------------------------------------------------------------
